CHANGELOG
--------------------------


ClanSphere 2011.3 >> 2012-03-02 [Last Release]
___________________________________________________________

-- Recommended PHP version changed to 5.4.0

-> Added caching support for a given number of seconds [ttl] (hajo)
-> Added caching support for wincache extension (hajo)
-> Added forwarding support to messages mod (fr33z3m4n)
-> Added new country icons and dropdown entries (hajo)
-> Fixed email line-endings and user email activation issues (hajo)
-> Fixed language switching problems (hajo)
-> Fixed options and removal in maps mod (palle!)
-> Fixed php error handling with @ sign (hajo)
-> Fixed some sql queries that don't follow the standard (patches by pico)
-> Improved magic_quotes detection and handling (hajo)
-> Improved support for IPv6 (hajo, fr33z3m4n)
-> Removed author from news rss feed (hajo)
-> Reworked servers mod and added ttl caching (fr33z3m4n)
-> Updated jQuery to 1.7.1 (hajo)

-- Fixed a few bugs that were reported at "Trac" --


ClanSphere 2011.2.1 >> 2011-11-01
___________________________________________________________

-- Recommended PHP version changed to 5.3.8

-> Escaped html form output in cash mod (jam2)
-> Removed TextareaExpander due to the bugs it causes in some browsers (hajo)
-> Updated CKEditor to 3.6.2 (hajo)
-> Updated jQuery to 1.6.4 (hajo)

-- Fixed a few bugs that were reported at "Trac" --


ClanSphere 2011.2 >> 2011-07-06
___________________________________________________________

-> Added more information for servers without live stats turned on (patch by markezzz)
-> Added multiple choice option to board vote functionality (patch by lava)
-> Email of new registered users is now hidden by default (hajo)
-> Moved jQuery and corresponding javascript files to new mod jquery (hajo)
-> Renamed CKEditor config file to avoid conflicts with default one on updates (hajo)
-> Updated CKEditor to 3.6.1 (hajo)
-> Updated jQuery to 1.6.2 (hajo)

-- Fixed a few bugs that were reported at "Trac" --
